[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/textures/birds.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/hazards/hazard_bird.gd" type="Script" id=2]
[ext_resource path="res://resources/textures/warning_sign.png" type="Texture" id=3]
[ext_resource path="res://resources/godot/shine_shader.tres" type="Material" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 8.0

[node name="HazardBird" type="Area2D"]
script = ExtResource( 2 )

[node name="HeldCharacter" type="Sprite" parent="."]
position = Vector2( 0, 12 )
rotation = -3.14159

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 48, 64 )

[node name="AnimationTimer" type="Timer" parent="Sprite"]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Warning" type="Sprite" parent="."]
visible = false
material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Sprite/AnimationTimer" to="." method="_on_animation_timeout"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_warning_timeout"]
